ST: descritte alcune classi (ancora)

--- a/doc/SpecificaTecnica/SpecificaTecnica.tex
+++ b/doc/SpecificaTecnica/SpecificaTecnica.tex
@@ -443,6 +443,28 @@ Usato da \textit{SVGWriter} e dalle classi che implementano \textit{SVGWritable}
 \item \textit{endCommand} chiude il comando corrente.
 \end{elencopuntato}
 
+\subsezione{XMLParser}
+\subsubsezione{Tipo, obiettivo e funzione del componente}
+Un parser SVG.
+\subsubsezione{Relazioni d'uso di altre componenti}
+\subsubsezione{Interfacce e relazioni di uso da altre componenti}
+
+\subsubsezione{Attivit\`a svolte e dati trattati}
+\begin{elencopuntato}[\textbf{}]{\subsubsecindent}
+\item \textit{toSVG} converte in SVG.
+\end{elencopuntato}
+
+
+\subsezione{SVGReadable}
+\subsubsezione{Tipo, obiettivo e funzione del componente}
+Rappresenta un oggetto caricabile da un documento SVG.
+\subsubsezione{Relazioni d'uso di altre componenti}
+\subsubsezione{Interfacce e relazioni di uso da altre componenti}
+Implementata dalle classi che rappresentano figure.
+\subsubsezione{Attivit\`a svolte e dati trattati}
+\begin{elencopuntato}[\textbf{}]{\subsubsecindent}
+\item \textit{fromSVG} inizializza l'oggetto a partire da un tag SVG.
+\end{elencopuntato}
 
 \subsezione{Tipo, obiettivo e funzione del componente}
 \subsezione{Relazioni d'uso di altre componenti}
