ST: descritte ultime classi

--- a/doc/SpecificaTecnica/SpecificaTecnica.tex
+++ b/doc/SpecificaTecnica/SpecificaTecnica.tex
@@ -502,6 +502,51 @@ Usata da \textit{SVGReader} durante la conversione di un documento SVG. Ogni cla
 \item \textit{makeFigureClassFromTag} crea un'istanza della classe associata al nome di tag passato come parametro.
 \end{elencopuntato}
 
+\subsezione{Manual}
+\subsubsezione{Tipo, obiettivo e funzione del componente}
+Rappresenta il manuale utente.
+\subsubsezione{Relazioni d'uso di altre componenti}
+Usa \textit{StaticDocument} per ottenere il file contenente il manuale.
+\subsubsezione{Interfacce e relazioni di uso da altre componenti}
+\subsubsezione{Attivit\`a svolte e dati trattati}
+\begin{elencopuntato}[\textbf{}]{\subsubsecindent}
+\item \textit{get} ritorna il manuale.
+\end{elencopuntato}
+
+\subsezione{Point}
+\subsubsezione{Tipo, obiettivo e funzione del componente}
+Un punto sul piano.
+\subsubsezione{Relazioni d'uso di altre componenti}
+\subsubsezione{Interfacce e relazioni di uso da altre componenti}
+\subsubsezione{Attivit\`a svolte e dati trattati}
+
+\subsezione{PointSeq}
+\subsubsezione{Tipo, obiettivo e funzione del componente}
+Una sequenza di \textit{Point}.
+\subsubsezione{Relazioni d'uso di altre componenti}
+\subsubsezione{Interfacce e relazioni di uso da altre componenti}
+\subsubsezione{Attivit\`a svolte e dati trattati}
+
+\subsezione{Object}
+\subsubsezione{Tipo, obiettivo e funzione del componente}
+Superclasse di ogni classe.
+\subsubsezione{Relazioni d'uso di altre componenti}
+\subsubsezione{Interfacce e relazioni di uso da altre componenti}
+Ereditata automaticamente da ogni classe.
+\subsubsezione{Attivit\`a svolte e dati trattati}
+
+\subsezione{Function}
+\subsubsezione{Tipo, obiettivo e funzione del componente}
+Una funzione di prima classe che accetta un argomento di tipo qualsiasi. La funzione pu\`o essere anonima o no.
+\subsubsezione{Relazioni d'uso di altre componenti}
+\subsubsezione{Interfacce e relazioni di uso da altre componenti}
+Usata dai metodi di iterazione, come ad esempio \textit{each} di \textit{FigureSet}, per applicare una certa operazione ad ogni elemento di una collezione.
+\subsubsezione{Attivit\`a svolte e dati trattati}
+\begin{elencopuntato}[\textbf{}]{\subsubsecindent}
+\item \textit{call} richiama la funzione.
+\end{elencopuntato}
+
+
 \subsezione{Tipo, obiettivo e funzione del componente}
 \subsezione{Relazioni d'uso di altre componenti}
 \subsezione{Interfacce e relazioni di uso da altre componenti}
