ST: aggiunta breve descrizione di altissimo livello

--- a/doc/SpecificaTecnica/SpecificaTecnica.tex
+++ b/doc/SpecificaTecnica/SpecificaTecnica.tex
@@ -182,6 +182,8 @@ Il presente documento \`e redatto utilizzando le convenzioni inserite nel docume
 \subsezione{Metodo e formalismo di specifica}
 L'architettura del sistema \`e stata sviluppata secondo un paradigma orientato agli oggetti. Le componenti del sistema e le loro relazioni verranno presentate in questo documento tramite diagrammi standard UML. Verranno presentate prima le componenti ad alto livello, le quali saranno poi descritte in maggiore dettaglio. Saranno inoltre descritti i pattern progettuali utilizzati.
 \subsezione{Presentazione dell'architettura generale del sistema}
+[inserire diagramma ad alto livello]
+Il sistema si compone, al massimo livello di astrazione, di tre componenti: il primo si occupa dell'interfaccia utente, il secondo gestisce la logica interna, ovvero la gestione in memoria di quanto disegnato e della conversione tra rappresentazione interna e rappresentazione in SVG, e il terzo si occupa del salvataggio e del caricamento di file testuali.
 \subsezione{Identificazione dei componenti architetturali di alto livello}
 \subsubsezione{Logica interna}
 Questo sottosistema si divide in tre ulteriori sottosistemi
