aggiunti termini per il glossario

--- a/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
+++ b/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
@@ -179,7 +179,7 @@ Il presente documento \`e indirizzato a fornire una descrizione in grado di iden
 Il documento elenca pertanto i requisiti, impliciti, espliciti, funzionali e non funzionali, individuati per il prodotto di cui sopra.
 
 \subsezione{Scopo del prodotto}
-AJAXDRAW \`e inteso principalmente come \H{}Proof of Concept\H{}, ossia un'incompleta realizzazione di uno strumento grafico completamente basato sul web, con lo scopo di dimostrarne la fattibilit\`a o la fondatezza di alcuni principi o concetti costituenti. In particolare si avviciner\` a alle funzionalit\`a  del software \underline{Open Source} per il disegno vettoriale Inkscape.
+AJAXDRAW \`e inteso principalmente come \H{}Proof of Concept\H{}, ossia un'incompleta realizzazione di uno strumento grafico completamente basato sul {\underline{web}}, con lo scopo di dimostrarne la fattibilit\`a o la fondatezza di alcuni principi o concetti costituenti. In particolare si avviciner\` a alle funzionalit\`a  del software \underline{Open Source} per il disegno vettoriale Inkscape.
 
 \subsezione{Riferimenti normativi}
 Il presente documento \`e redatto in accordo con le norme interne di WebShape, raccolte in NormeDiProgetto.pdf, consegnato assieme a questo documento, e consultabile inoltre dal repository pubblico al quale WebShape si appoggia per i suoi progetti.
@@ -189,7 +189,7 @@ Il presente documento \`e redatto in accordo con le norme interne di WebShape, r
 \subsezione{Contesto d'uso del prodotto}
 
 \subsubsezione{Processi produttivi e modalit\`a d'uso}
-Il sistema sar\`a composto da una pagina web visualizzabile con uno qualsiasi dei pi\`u diffusi internet browsers attualmente esistenti.
+Il sistema sar\`a composto da una pagina web visualizzabile con uno qualsiasi dei pi\`u diffusi internet {\underline{browsers}} attualmente esistenti.
 
 \subsubsezione{Piattaforme d'esecuzione,\\ interfacciamento con l'ambiente utilizzato}
 Il prodotto \`e destinato all'uso da parte di qualunque persona abbia installato nel proprio computer uno dei principali internet browsers, quindi \`e possibile garantirne il funzionamento su ogni ambiente d'esecuzione. (Si rimanda alla lista dei requisiti nella sezione \ref{listarequisiti}).
@@ -226,7 +226,7 @@ Il seguente grafico descrive come ci si attende l'utente avvii l'applicazione.
 Segue ora una descrizione testuale del caso d'uso presentato dal grafico.
 
 \subsubsezione{UC0 Caso d'uso: richiedi pagina web}
-\paragraph{Attori coinvolti} Utente, browser, server HTTP.
+\paragraph{Attori coinvolti} Utente, browser, {\underline{server HTTP}}.
 \paragraph{Scopo e descrizione sintetica}
 L'utente avvia l'applicazione visualizzandone la relativa pagina web attraverso il browser, che richiede la relativa pagina al server HTTP.
 \paragraph{Flusso di eventi}
@@ -271,7 +271,7 @@ L'utente pu\`o visualizzare il manuale dell'applicazione in linea.
 \paragraph{Flusso di eventi}
 \begin{elenconumerato}[\textbf{}]{\subsubsecindent}
 \item L'utente seleziona il comando per visualizzare il manuale. 
-\item Il manuale viene visualizzato mediante l'apertura di una nuova pagina HTML.
+\item Il manuale viene visualizzato mediante l'apertura di una nuova pagina {\underline{HTML}}.
 \end{elenconumerato}
 \paragraph{Precondizioni} Il manuale utente non \`e visualizzato.
 \paragraph{Postcondizioni} Il manuale utente \`e visualizzato.
@@ -773,7 +773,7 @@ Tutti i requisiti elencati in seguito sono espliciti del capitolato.
 \subsezione{Requisiti di qualit\`a (RQ)}	
 \subsubsezione{Obbligatori (RQO)}
 \begin{elenconumerato}[\textbf{RQO-}]{\subsubsecindent}
-\item ACO-5 - Il lato client dell'applicativo dev'essere realizzato usando tecnologie web standard
+\item ACO-5 - Il lato {\underline{client}} dell'applicativo dev'essere realizzato usando tecnologie web standard
 \footnote{con il termine \H{}standard\H{} si intendono tecnologie effettivamente standardizzate come l'\underline{ECMAScript} o tecnologie considerate standard \textit{de facto} come quelle raccomandata dal \textit{W3C}.}
 \item ACO-8 - Il codice sorgente segue le norme interne all'azienda.
 \item ACO-8 - Il codice sorgente segue il paradigma della programmazione ad oggetti.
