--- a/doc/Glossario/Glossario.tex
+++ b/doc/Glossario/Glossario.tex
@@ -198,6 +198,10 @@ indica una componente che accede ai servizi o alle risorse di un'altra component
 \` e un linguaggio usato per descrivere la struttura dei documenti ipertestuali disponibili nel \hyperlink{www}{\underline{World Wide Web}}.
 L'HTML non \` e un linguaggio di programmazione, ma un \hyperlink{linguaggio di markup}{\underline{Linguaggio di markup}}, ossia descrive il contenuto, testuale e non, di una pagina web.\\
 
+\hypertarget{html5}{}
+\textbf{HTML 5:}
+HTML 5 è un \hyperlink{linguaggio di markup}{\underline{Linguaggio di markup}} per la progettazione delle pagine web attualmente in fase di definizione, presso il \hyperlink{w3c}{\underline{W3C}}.\\
+
 \section*{J}
 \hypertarget{javascript}{}
 \textbf{JavaScript:}
@@ -226,12 +230,21 @@ Il PNG (Portable Network Graphics) \`e un formato di file che permette di memori
 \hypertarget{rgb}{}
 \textbf{RGB:}
 RGB (Red, Green, Blue) \`e  il nome di un modello di colori di tipo additivo che si basa sui tre colori rosso, verde e blu, da cui appunto il nome RGB, da non confondere con i colori primari sottrattivi giallo, ciano e magenta (chiamati anche giallo, rosso e blu).
-Un'immagine pu\`o  infatti essere scomposta, attraverso filtri o altre tecniche, in questi colori base che, miscelati tra loro, danno quasi tutto lo spettro dei colori visibili, con l'eccezione delle porpore.
+Un'immagine pu\`o  infatti essere scomposta, attraverso filtri o altre tecniche, in questi colori base che, miscelati tra loro, danno quasi tutto lo spettro dei colori visibili, con l'eccezione delle porpore.\\
 
 \section*{S}
 \hypertarget{server}{}
 \textbf{Server:}
 \`e una componente informatica software o hardware che fornisce servizi ad altre componenti chiamate \hyperlink{client}{\underline{client}} attraverso una rete. \\
+
+\hypertarget{serverhttp}{}
+\textbf{Server HTTP:}
+Si veda Server Web.\\
+
+\hypertarget{serverweb}{}
+\textbf{Server Web:}
+Un server web o server HTTP è un processo, e per estensione il computer su cui è in esecuzione, che si occupa di fornire, su richiesta del browser, una pagina web. Le informazioni inviate dal web server viaggiano in rete trasportate dal protocollo HTTP. L'insieme di server web dà vita al \hyperlink{www}{\underline{WWW}}.\\ 
+
 
 \hypertarget{svg}{}
 \textbf{SVG:}
