--- a/doc/NormeDiProgetto/NormeDiProgetto.tex
+++ b/doc/NormeDiProgetto/NormeDiProgetto.tex
@@ -211,7 +211,7 @@ Considerato il prerequisito del capitolato d'appalto di pubblicare il progetto s
 Per la creazione di diagrammi UML l'azienda si serve del software ArgoUML v0.26.2 (\href{http://argouml.tigris.org/}{http://argouml.tigris.org/}), scelto principalmente per la semplicit\`a di utilizzo e per la possibilit\`a di esportare le immagini in formato \underline{PNG}.
 
 \subsezione{Pianificazione delle attivit\`a}
-Per pianificare le attivit\`a il gruppo ha deciso di adottare i diagrammi di Gantt perch\`e ritenuti pi\`u immediati; pertanto si \`e scelto di usare il software GanttProject (\href{http://ganttproject.biz/}{http://ganttproject.biz/}) nella versione 2.0.8.
+Per pianificare le attivit\`a il gruppo ha deciso di adottare i diagrammi di {\underline{Gantt}} perch\`e ritenuti pi\`u immediati; pertanto si \`e scelto di usare il software GanttProject (\href{http://ganttproject.biz/}{http://ganttproject.biz/}) nella versione 2.0.8.
 
 \subsezione{Editor \LaTeX}
 L'ambiente di sviluppo \LaTeX \ non \`e definito poich\`e non influisce nel risultato finale, e perch\`e si preferisce lasciare i membri del gruppo liberi di utilizzare l'editor che ritengono pi\`u adatto alle loro caratteristiche.
