--- a/doc/PianoDiProgetto/PianoDiProgetto.tex
+++ b/doc/PianoDiProgetto/PianoDiProgetto.tex
@@ -566,7 +566,7 @@ Un punto fondamentale al quale bisogna prestare molta attenzione \`e la suddivis
 \item \textbf{Mancanza del personale}\\
 Essendo l'azienda composta da sei membri, nell'eventualit\`a che uno di questi non possa pi\`u partecipare alle attivit\`a di progetto, c'\`e un possibile rischio che l'azienda abbia un numero insufficiente di persone per continuare il lavoro sotto le ipotesi e le stime preventivate. In questo caso, l'azienda WebShape porter\`a comunque a termine il suo lavoro.
 \item \textbf{Compatibilit\`a e portabilit\`a del prodotto}\\
-Il prodotto finale, come da Requisiti, dovr\`a risultare funzionante sui pi\`u moderni browser in circolazione. Questo fatto \`e per\`o  a discrezione dell'utente finale, il quale deve essere consapevole della non retrocompatibilit\`a del prodotto, e quindi anche la portabilit\`a risulta essere  a sua discrezione.
+Il prodotto finale, come da Requisiti, dovr\`a risultare funzionante sui pi\`u moderni {\underline{browser}} in circolazione. Questo fatto \`e per\`o  a discrezione dell'utente finale, il quale deve essere consapevole della non retrocompatibilit\`a del prodotto, e quindi anche la portabilit\`a risulta essere  a sua discrezione.
 \item \textbf{Funzionalit\`a del prodotto}\\
 Essendo il prodotto finale utilizzato da un qualsiasi tipo di utente finale, \`e necessario prestare attenzione a come il prodotto si presenta, rendendo l'accessibilit\`a a tutte le sue funzioni, semplice e immediata.
 \end{itemize}			
